# nzihl-player-photos

./: .gitignore  README.md  _config.yml  index.html  manifest.json  memory.md  pyproject.toml  requirements.txt
.github/workflows/: build-photos.yml  force-pages-build.yml
src/player_photos/: cli.py  gallery.py  http.py  manifest.py  overrides.py  photos.py  scraper.py  stats.py  teams.py
tests/: test_cli.py  test_filename_normalization.py  test_gallery.py  test_manifest.py  test_overrides.py  test_photos.py  test_scraper.py  test_stats.py
tests/fixtures/: personnel_min.html  personnel_no_coaches.html  standings_min.md  team_min.html
