[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nzihl-player-photos"
version = "0.1.0"
description = "Weekly warehouse of NZIHL/NZWIHL player + coach headshots, scraped from esportsdesk."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "Pillow==10.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
